# reference: https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = upyog
version = 0.1.0
author = Rahul Somani
author_email = rsomani95@gmail.com
description = Myriad Utilities
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utilities
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.7,<4
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    fastcore
    rich
    numpy
    pandas
    pyperclip
    matplotlib
    loguru
    aggdraw
    pillow-simd

[options.extras_require]
all =
    # git+https://github.com/openai/CLIP.git

dev =
    black >=20.8b1,<21
    pytest >=6,<7
    jupyter >=1.0.0,<2
    pre-commit >=2.8.2,<3


[options.entry_points]
console_scripts =
    move-files = upyog.os.cli:move_files
    # make-img-grid
    # clean-filenames
