# reference: https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

# How to upload to PyPI

# python setup.py sdist bdist_wheel
# twine check dist/*
# twine upload --repository pypi dist/*
# https://packaging.python.org/tutorials/packaging-projects/


[metadata]
name = upyog
version = 0.7.5
author = Rahul Somani
author_email = rsomani95@gmail.com
description = Myriad Utilities
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utilities
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.7,<4
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    fastcore
    rich
    numpy
    pandas
    pyperclip
    matplotlib
    loguru
    aggdraw
    # pillow-simd
    typing_extensions
    exif
    tabulate
    pytz
    seaborn
    tqdm

[options.extras_require]
all =
    # git+https://github.com/openai/CLIP.git

dev =
    black >=20.8b1,<21
    pytest >=6,<7
    jupyter >=1.0.0,<2
    pre-commit >=2.8.2,<3


[options.entry_points]
console_scripts =
    remove-duplicates-from-folder     = upyog.os.cli:remove_duplicates_from_folder
    print-folder-distribution         = upyog.os.cli:print_folder_distribution
    generate-image-grid               = upyog.image.cli:create_image_grid_from_folders
    add-parent-folder-name            = upyog.os.cli:add_parent_folder_name
    move-files                        = upyog.os.cli:move_files
    find-common-files-between-folders = upyog.os.cli:find_common_files_between_folders
    nb2script                         = upyog.nb2script:notebook2script
    # clean-filenames
